--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
 linkedlist/linkedlistComplete.exe
 linkedlist/.cph/.linkedlistComplete.c_1a0330e4d996ea057787bd4cb36def7e.prob
 .vscode/tasks.json
+.vscode/settings.json
+*.exe
